--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
     <div class="container">
         <!-- Sidebar -->
         <div class="sidebar">
-            <div class="profile-image">
-                <div
-                    style="display: flex; align-items: center; justify-content: center; height: 100%; font-size: 24px; color: #88c0d0;">
-                    <i class="fas fa-user-secret"></i>
-                </div>
+            <div class="profile-image">                
+                <img src="images/avatarxoaphong.PNG" alt="Phạm Hoàng Gia Bảo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">               
             </div>
 
             <div class="name">Phạm Hoàng Gia Bảo</div>
