--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="profile-image">                
-                <img src="~/avatarxoaphong.PNG" alt="Phạm Hoàng Gia Bảo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">               
+                <img src="images/avatarxoaphong.PNG" alt="Phạm Hoàng Gia Bảo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">               
             </div>
 
             <div class="name">Phạm Hoàng Gia Bảo</div>
