--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="images/avatarxoaphong.PNG" alt="Phạm Hoàng Gia Bảo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">               
             </div>
             <div class="name">Phạm Hoàng Gia Bảo</div>
-            <div class="title">Chuyên gia An ninh Mạng</div>
+            <div class="title">Thực tập sinh An Ninh Mạng</div>
 
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/bao-pham-4a18a2324/" target="_blank"><i
@@ -179,9 +179,9 @@
                         <div class="skill-icon"><i class="fas fa-code"></i></div>
                         <div class="skill-title">Lập trình & Phát triển</div>
                         <div class="skill-description">
-                            <strong>Ngôn ngữ:</strong> Java (Socket), JavaScript, Python, C#, HTML, CSS<br>
-                            <strong>Framework/Stack:</strong> ASP.NET MVC, MERN Stack (MongoDB, Express.js, React, Node.js)<br>
-                            <strong>Ứng dụng:</strong> Phát triển web, phát triển di động, ứng dụng Client-Server<br>
+                            <strong>Ngôn ngữ:</strong> Java, C# (Basic) <br>
+                            <strong>Framework/Stack:</strong> ASP.NET MVC (Basic)<br>
+                            <strong>Ứng dụng:</strong> Phát triển web, ứng dụng Client-Server<br>
                             <strong>Xử lý ảnh & Nhận diện:</strong> OpenCV, Face++
                         </div>
                     </div>
@@ -203,7 +203,6 @@
                         <div class="skill-description">
                             <strong>Windows Server:</strong> Cấu hình và quản trị server<br>
                             <strong>Linux:</strong> Kali Linux, Ubuntu<br>
-                            <strong>Thiết kế phần mềm:</strong> UML (Use Case, Sequence, Class Diagram)
                         </div>
                     </div>
 
