--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <div class="command-output">Cybersecurity Student | Penetration Tester | Full-Stack Developer
                         </div>
                         <div class="command-prompt">root@security:~$ cat skills.txt</div>
-                        <div class="command-output">Java | Python | JavaScript | C# | MERN Stack | ASP.NET MVC | OpenCV
+                        <div class="command-output">Java | C# (Cơ bản)| ASP.NET MVC | OpenCV
                         </div>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
 
                     <div class="skill-item">
                         <div class="skill-icon"><i class="fas fa-tools"></i></div>
-                        <div class="skill-title">Công cụ chuyên dụng</div>
+                        <div class="skill-title">Công cụ chuyên dụng (Biết sử dụng cơ bản)</div>
                         <div class="skill-description">
                             <strong>Phân tích mạng:</strong> Wireshark, Scapy, Nmap<br>
                             <strong>Bảo mật web:</strong> Burp Suite, Checkmarx<br>
@@ -240,8 +240,8 @@
                             <strong>Chuyên môn chính:</strong><br>
                             Cybersecurity & Network Security | Web Application Security | System Administration<br>
                             <strong>Công nghệ:</strong><br>
-                            Java, Python, JavaScript, C# | MERN Stack, ASP.NET MVC | OpenCV, Face++<br>
-                            <strong>Công cụ:</strong><br>
+                            Java, C# (Basic) | ASP.NET MVC (Basic) | OpenCV, Face++<br>
+                            <strong>Công cụ (Biết sử dụng cơ bản):</strong><br>
                             Wireshark, Burp Suite, Scapy, Checkmarx, Nmap, MySQL Workbench, Git, Netty
                         </div>
                     </div>
